# Laba3

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
QueueLib/: Queue.h
SteckLib/: Steck.h
test/: Test_TSteck.cpp  test_TQueue.cpp
